plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.8'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = "com.example"
version = "0.0.1-SNAPSHOT"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

ext {
    liquibaseVersion = '5.0.1'
    mapstructVersion = '1.5.5.Final'
}

configurations {
    mapstruct
}

dependencies {
    // Spring Boot Starters
    implementation("org.springframework.boot:spring-boot-starter-data-mongodb")
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-webflux")
    implementation("org.springframework.boot:spring-boot-starter-validation")

    // Liquibase for MongoDB
    implementation("org.liquibase:liquibase-core")
    implementation("org.liquibase.ext:liquibase-mongodb:${liquibaseVersion}")


    // MapStruct
    implementation("org.mapstruct:mapstruct:${mapstructVersion}")
    annotationProcessor("org.mapstruct:mapstruct-processor:${mapstructVersion}")

    // Lombok
    compileOnly("org.projectlombok:lombok")
    annotationProcessor("org.projectlombok:lombok")

    // For MapStruct + Lombok integration
    annotationProcessor("org.projectlombok:lombok-mapstruct-binding:0.2.0")

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    // Test dependencies
    testImplementation 'org.springframework:spring-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testImplementation 'org.springframework.kafka:spring-kafka'
    testImplementation 'io.projectreactor:reactor-test'

    // TestContainers
    testImplementation 'org.testcontainers:testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:mongodb'
    testImplementation 'org.testcontainers:kafka'

    // WireMock
    testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:2.35.1'

    // Awaitility for async testing
    testImplementation 'org.awaitility:awaitility:4.2.0'

    // Mockito
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'

    // JSON Path для тестов
    testImplementation 'com.jayway.jsonpath:json-path:2.9.0'

    // AssertJ
    testImplementation 'org.assertj:assertj-core:3.24.2'
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
    systemProperty "spring.profiles.active", "test"
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
}

bootJar {
    archiveFileName = "payment-service.jar"
}